--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <img src="tlb_logo.jpeg" class="top-image" alt="Logo">
 
-<h1>VTG Calculator</h1>
+<h1>Gravity Correction Calculator</h1>
 
 <label>Current Volume (gallons):
   <input type="number" id="volume" step="0.01" value="279">
