--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <img src="tlb_logo.jpeg" class="top-image" alt="Logo">
 
-<h1>Gravity Correction Calculator</h1>
+<h1>Top Up Calculator</h1>
 
 <label>Current Volume (gallons):
   <input type="number" id="volume" step="0.1" value="279">
@@ -49,7 +49,7 @@
 </label>
 <br>
 
-<label>Terminal Gravity:
+<label>Target Gravity (0.5 less than Terminal Gravity):
   <input type="number" id="terminalGravity" step="0.1" value="">
 </label>
 <br><br>
