changed some wording

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </label>
 <br>
 
-<label>Target Gravity (0.5 less than Terminal Gravity):
+<label>Target Gravity (0.5 less than Post-Boil Gravity):
   <input type="number" id="terminalGravity" step="0.1" value="">
 </label>
 <br><br>
